Some viewing fixes Add shuffle Add control filter lists Add animes info